Unify Nav Bar across all pages
- Replace external logo links with /assets/apple-touch-icon.png
- Standardize logo size to 40x40 (was 80x80 in some pages)
- Add bilingual support (Arabic/English) to all Nav Bars
- Add logo image to pages that were missing it
- Ensure consistent Nav Bar structure across all 15 pages

Updated pages:
- calendar.html: Fixed external logo link
- contact.html: Fixed external logo link
- achievements.html: Added logo image and bilingual support
- complaints.html: Added logo image and bilingual support
- jobs.html: Added logo image and bilingual support
- statistics.html: Added logo image and bilingual support
- gallery.html: Added bilingual support

--- a/achievements.html
+++ b/achievements.html
@@ -53,7 +53,11 @@
 <body>
   <nav class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html">مجلس طلاب خطوة</a>
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
+        <img src="/assets/apple-touch-icon.png" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
+        <span data-lang="ar">مجلس طلاب خطوة</span>
+        <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
+      </a>
       <div class="nav-links">
         <a href="/about.html">من نحن</a>
         <a href="/news.html">الأخبار</a>
