--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,8 @@
     <div class="container nav-inner">
       <a class="brand" href="/index.html">
         <img src="/assets/apple-touch-icon.png" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40">
-        <span>مجلس طلاب خطوة</span>
+        <span data-lang="ar">مجلس طلاب خطوة</span>
+        <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
       </a>
       <button id="menu-toggle" class="menu-toggle" type="button" aria-expanded="false" aria-controls="primary-nav" aria-label="فتح وإغلاق القائمة">القائمة</button>
       <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
