--- a/calendar.html
+++ b/calendar.html
@@ -23,11 +23,11 @@
   <meta property="og:title" content="التقويم – Khotwa">
   <meta property="og:description" content="جدول الفعاليات القادمة لطلاب خطوة.">
   <meta property="og:url" content="https://khotwastudentcouncil.com/calendar.html">
-  <meta property="og:image" content="https://g.top4top.io/p_3516rfttb1.jpg">
+  <meta property="og:image" content="/assets/apple-touch-icon.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="التقويم – Khotwa">
   <meta name="twitter:description" content="جدول الفعاليات القادمة لطلاب خطوة.">
-  <meta name="twitter:image" content="https://g.top4top.io/p_3516rfttb1.jpg">
+  <meta name="twitter:image" content="/assets/apple-touch-icon.png">
 
   <!-- JSON-LD placeholder؛ بنحقن واحد جديد ديناميكي -->
   <script type="application/ld+json">
@@ -268,7 +268,7 @@
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="80" height="80" decoding="async" loading="lazy">
+        <img src="/assets/apple-touch-icon.png" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
         <span data-lang="ar">مجلس طلاب خطوة</span>
         <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
       </a>
