✨ Add feedback button to all pages & fix news.html styling
- Add feedback.css + feedback.js to 7 pages (achievements, complaints, gallery, jobs, qr-scanner, statistics, events)
- Fix news.html: add main.css, favicons, theme-color meta tags
- Ensure all 16 pages have consistent feedback button
- All pages now responsive and properly styled

--- a/achievements.html
+++ b/achievements.html
@@ -49,6 +49,7 @@
     }
   </style>
   <script src="/assets/khotwa-api.js?v=1765938212"></script>
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <nav class="navbar">
@@ -134,5 +135,6 @@
     
     loadAchievements();
   </script>
+<script src="/assets/feedback.js"></script>
 </body>
 </html>
