--- a/gallery.html
+++ b/gallery.html
@@ -164,6 +164,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script src="/assets/analytics.js"></script>
   <script src="/assets/khotwa-api.js"></script>
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <nav class="navbar">
@@ -350,5 +351,6 @@
       loadGallery();
     });
   </script>
+<script src="/assets/feedback.js"></script>
 </body>
 </html>
