--- a/jobs.html
+++ b/jobs.html
@@ -80,6 +80,7 @@
     }
   </style>
   <script src="/assets/khotwa-api.js?v=1765938212"></script>
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <nav class="navbar">
@@ -172,5 +173,6 @@
     
     loadJobs();
   </script>
+<script src="/assets/feedback.js"></script>
 </body>
 </html>
