--- a/statistics.html
+++ b/statistics.html
@@ -43,6 +43,7 @@
     }
   </style>
   <script src="/assets/khotwa-api.js?v=1765938212"></script>
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <nav class="navbar">
@@ -135,5 +136,6 @@
     loadStatistics();
     setInterval(loadStatistics, 30000);
   </script>
+<script src="/assets/feedback.js"></script>
 </body>
 </html>
