--- a/complaints.html
+++ b/complaints.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/assets/main.css"/>
   <link rel="icon" href="/assets/favicon-32.png"/>
   <script src="/assets/khotwa-api.js?v=1765938212"></script>
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <nav class="navbar">
@@ -78,5 +79,6 @@
       }
     });
   </script>
+<script src="/assets/feedback.js"></script>
 </body>
 </html>
