--- a/qr-scanner.html
+++ b/qr-scanner.html
@@ -155,6 +155,7 @@
       text-decoration:underline;
     }
   </style>
+  <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
   <div class="container">
@@ -360,5 +361,6 @@
       initScanner();
     })();
   </script>
+<script src="/assets/feedback.js"></script>
 </body>
 </html>
