🐛 Fix HTML title tags & add missing files (logo.png, logo.svg, manifest.json)

--- a/calendar.html
+++ b/calendar.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
-  <!-- عنوان ديناميكي حسب اللغة -->
-  <title data-lang="ar">التقويم – Khotwa</title>
-  <title data-lang="en" hidden>Calendar – Khotwa</title>
+  <title>التقويم – Khotwa Student Council</title>
 
     <meta name="keywords" content="تقويم خطوة, جدول الفعاليات, مواعيد الأنشطة, تقويم أكاديمي, جامعة لا تروب">
   <meta name="description" content="تقويم شامل لجميع فعاليات وأنشطة مجلس طلاب خطوة. خطط مسبقاً واحجز موعدك لحضور الفعاليات القادمة.">
