Fix: استخدام imageUrl بدلاً من image في news.html و events.html - إصلاح عرض الصور

--- a/jobs.html
+++ b/jobs.html
@@ -79,11 +79,11 @@
       border: 1px dashed var(--ring, #e5e7eb);
     }
   </style>
-  <script src="/assets/khotwa-api.js?v=1765938212"></script>
+  <script src="/assets/khotwa-api.js?v=1766761756"></script>
   <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
         <img src="/assets/apple-touch-icon.png" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
