--- a/events.html
+++ b/events.html
@@ -294,7 +294,7 @@
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-HCS6PYK04X');</script>
-  <script src="/assets/khotwa-api.js?v=1765938212"></script>
+  <script src="/assets/khotwa-api.js?v=1766761756"></script>
 </head>
 <body>
   <a href="#main" class="skip-link">تخطَّ إلى المحتوى</a>
@@ -620,9 +620,9 @@
             const location = event.location || 'غير محدد';
 
             article.innerHTML = `
-              ${event.image
-                ? `<img src="${event.image}" alt="${title.replace(/"/g,'&quot;')}" loading="lazy" decoding="async">`
-                : `<div style="aspect-ratio:16/9;background:#f3f4f6"></div>`}
+              ${event.imageUrl
+                ? `<img src="${event.imageUrl}" alt="${title.replace(/"/g,'&quot;')}" loading="lazy" decoding="async" style="width:100%;height:auto;border-radius:8px">`
+                : `<div style="aspect-ratio:16/9;background:#f3f4f6;border-radius:8px"></div>`}
               <div class="body">
                 <div class="meta">
                   <span data-lang="ar">📅 ${arDate}</span>
