--- a/gallery.html
+++ b/gallery.html
@@ -167,7 +167,7 @@
   <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html">
         <img src="/assets/apple-touch-icon.png" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40">
