--- a/qr-scanner.html
+++ b/qr-scanner.html
@@ -158,6 +158,17 @@
   <link rel="stylesheet" href="/assets/feedback.css">
 </head>
 <body>
+  <!-- Navbar -->
+  <nav class="navbar" style="position:sticky;top:0;background:var(--card);border-bottom:1px solid var(--ring);z-index:40;padding:0.8rem 0">
+    <div class="container" style="display:flex;align-items:center;justify-content:space-between">
+      <a href="/index.html" style="display:flex;align-items:center;gap:0.6rem;font-weight:700;text-decoration:none;color:inherit">
+        <img src="/assets/apple-touch-icon.png" alt="شعار مجلس طلاب خطوة" width="40" height="40" style="border-radius:8px">
+        <span>مجلس طلاب خطوة</span>
+      </a>
+      <a href="/index.html" style="color:var(--primary);text-decoration:none">الرئيسية</a>
+    </div>
+  </nav>
+
   <div class="container">
     <header>
       <h1>🎫 مسح QR للحضور</h1>
